fix alignments and add favicon

--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ height: fit-content;
 gap: 48px;
 align-items: center;
 flex-wrap: wrap;
-height: 600px;
+height: 480px;
 }
 .hero-left {
 flex: 1;
@@ -149,30 +149,31 @@ object-fit: cover;
 /* Testimonials section */
 .testimonials-container {
 	background-color: #e5e7eb;
-margin-top: 100px;
-padding: 0 80px;
+margin-top: 50px;
+padding: 100px 20px;
 }
 
 .testimonials {
 
-	font-weight: lighter;
-
-	height: 500px;
+	font-weight: 100;
+	height: auto;
 display: flex;
-max-width: 800px;
 flex-direction: column;
 justify-content: center;
+align-items: center;
+max-width: 700px;
 margin: auto;
 }
 .review {
 font-style: italic;
-font-size: 36px;
+font-size: 22px;
 font-weight: 100;
+
 }
 .author {
 align-self: flex-end;
 font-weight: 600;
-font-size: 28px;
+font-size: 20px;
 }
 
 /* Call to action section*/
